Crash rendering Cycles and Grease Pencil with Save Buffers enabled #78028

Closed
opened 2020-06-19 03:33:52 +02:00 by Jason Hu · 20 comments

System Information
Operating system: win10
Graphics card: gtx 1080, gtx 1050 ti

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-20 04:49, hash: d994391e0c
Worked: 2.80

Short description of error

my blender program crashes upon completing the render of the frame. does not crash in Eevee. only crashes with the grease pencil object enabled. no crash with just the cube. tested on separate PC, same crash problem.

Exact steps for others to reproduce the error
grease pencil cycles test.blend
render frame using gpu/cpu

**System Information** Operating system: win10 Graphics card: gtx 1080, gtx 1050 ti **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-20 04:49, hash: d994391e0c Worked: 2.80 **Short description of error** my blender program crashes upon completing the render of the frame. does not crash in Eevee. only crashes with the grease pencil object enabled. no crash with just the cube. tested on separate PC, same crash problem. **Exact steps for others to reproduce the error** [grease pencil cycles test.blend](https://archive.blender.org/developer/F8631403/grease_pencil_cycles_test.blend) render frame using gpu/cpu
Author

Added subscriber: @awesomejason7777

Added subscriber: @awesomejason7777

#79161 was marked as duplicate of this issue

#79161 was marked as duplicate of this issue

Added subscribers: @lichtwerk, @antoniov

Added subscribers: @lichtwerk, @antoniov

@lichtwerk Can you try to reproduce... I get the crash, but when try to debug the crash I get crashes in multiple places and not a consistent crash.

EDIT: All that I have seen running with --debug --factory-startupis this:

read exr tmp file: C:\Users\Antonio\AppData\Local\Temp\blender_a22848\grease pencil cycles test.blend_Scene_View Layer.exr
OpenEXR-readPixels: ERROR: Error reading pixel data from image file "C:\Users\Antonio\AppData\Local\Temp\blender_a22848\grease pencil cycles test.blend_Scene_View Layer.exr". Tile (0, 0, 0, 0) is missing.```
@lichtwerk Can you try to reproduce... I get the crash, but when try to debug the crash I get crashes in multiple places and not a consistent crash. EDIT: All that I have seen running with `--debug --factory-startup`is this: ```write exr tmp file, 1920x1080, C:\Users\Antonio\AppData\Local\Temp\blender_a22848\grease pencil cycles test1.blend_Scene_View Layer.exr read exr tmp file: C:\Users\Antonio\AppData\Local\Temp\blender_a22848\grease pencil cycles test.blend_Scene_View Layer.exr OpenEXR-readPixels: ERROR: Error reading pixel data from image file "C:\Users\Antonio\AppData\Local\Temp\blender_a22848\grease pencil cycles test.blend_Scene_View Layer.exr". Tile (0, 0, 0, 0) is missing.```
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Member

Sorry, changing it back to Needs triage as when I started to play around with the file I started to realize that it's probably not as simple as I thought.

Sorry, changing it back to `Needs triage` as when I started to play around with the file I started to realize that it's probably not as simple as I thought.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I get consistent crash with this stack:

atio6axx.dll!00007ffb6b6dcf64()	Unknown
atio6axx.dll!00007ffb6afbc1fa()	Unknown
atio6axx.dll!00007ffb6af25f78()	Unknown
atio6axx.dll!00007ffb6a49509b()	Unknown
atio6axx.dll!00007ffb6aba3352()	Unknown
opengl32.dll!00007ffb7f0f1e08()	Unknown
blender.exe!GPU_framebuffer_read_depth(GPUFrameBuffer * fb, int x, int y, int w, int h, float * data) Line 641	C
blender.exe!GPENCIL_render_result_z(RenderLayer * rl, const unsigned char * viewname, GPENCIL_Data * vedata, const rcti * rect) Line 188	C
blender.exe!DRW_render_gpencil_to_image(RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 1646	C
blender.exe!DRW_render_gpencil(RenderEngine * engine, Depsgraph * depsgraph) Line 1717	C
blender.exe!RE_engine_render(Render * re, int do_all) Line 884	C
blender.exe!do_render(Render * re) Line 1217	C
blender.exe!do_render_composite(Render * re) Line 1355	C
blender.exe!do_render_all_options(Render * re) Line 1617	C
blender.exe!RE_RenderAnim(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int sfra, int efra, int tfra) Line 2593	C
blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 653	C
blender.exe!do_job_thread(void * job_v) Line 398	C
[External Code]	

Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13586 Core Profile Context 19.12.2 26.20.15002.61
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-20 04:49, hash: d994391e0c

OpenCL GPU or CPU gives same stack, EEVEE is OK

I get consistent crash with this stack: ``` atio6axx.dll!00007ffb6b6dcf64() Unknown atio6axx.dll!00007ffb6afbc1fa() Unknown atio6axx.dll!00007ffb6af25f78() Unknown atio6axx.dll!00007ffb6a49509b() Unknown atio6axx.dll!00007ffb6aba3352() Unknown opengl32.dll!00007ffb7f0f1e08() Unknown blender.exe!GPU_framebuffer_read_depth(GPUFrameBuffer * fb, int x, int y, int w, int h, float * data) Line 641 C blender.exe!GPENCIL_render_result_z(RenderLayer * rl, const unsigned char * viewname, GPENCIL_Data * vedata, const rcti * rect) Line 188 C blender.exe!DRW_render_gpencil_to_image(RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 1646 C blender.exe!DRW_render_gpencil(RenderEngine * engine, Depsgraph * depsgraph) Line 1717 C blender.exe!RE_engine_render(Render * re, int do_all) Line 884 C blender.exe!do_render(Render * re) Line 1217 C blender.exe!do_render_composite(Render * re) Line 1355 C blender.exe!do_render_all_options(Render * re) Line 1617 C blender.exe!RE_RenderAnim(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int sfra, int efra, int tfra) Line 2593 C blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 653 C blender.exe!do_job_thread(void * job_v) Line 398 C [External Code] ``` Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13586 Core Profile Context 19.12.2 26.20.15002.61 Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-20 04:49, hash: `d994391e0c` OpenCL GPU or CPU gives same stack, EEVEE is OK

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht

@fclem @brecht do you have any idea about this bug?

@fclem @brecht do you have any idea about this bug?

What happen if you do a single threaded render (launch withblender -t 1

What happen if you do a single threaded render (launch with`blender -t 1`
Brecht Van Lommel changed title from blender crash on grease pencil cycles render to Crash rendering Cycles and Grease Pencil with Save Buffers enabled 2020-06-23 14:02:56 +02:00

The logic in RE_engine_render will need to be changed so that we load back the render buffers from disk before doing the grease pencil render.

I'll have a look at it, we need to do this carefully so that we at least avoid increasing peak memory usage for the case where there is no grease pencil.

The logic in `RE_engine_render` will need to be changed so that we load back the render buffers from disk before doing the grease pencil render. I'll have a look at it, we need to do this carefully so that we at least avoid increasing peak memory usage for the case where there is no grease pencil.

Added subscriber: @ostapblender

Added subscriber: @ostapblender

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Brecht Van Lommel was assigned by Dalai Felinto 2020-09-08 17:51:34 +02:00

Assigning to Brecht since he said he was going to look into that. Also marking as confirmed.

Assigning to Brecht since he said he was going to look into that. Also marking as confirmed.

This issue was referenced by 60c4d0b5fb

This issue was referenced by 60c4d0b5fb76a8bf2e53b760f92f3d9febecf62d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78028
No description provided.