source/blender/render/extern/include/RE_engine.h
@@ -149,6 +149,7 @@ typedef struct RenderEngine {
 
   /* Depsgraph */
   struct Depsgraph *depsgraph;
+  bool has_grease_pencil;
 
   /* callback for render pass query */
   ThreadMutex update_render_passes_mutex;
